Refactor application properties and AWS configuration for DynamoDB integration; update test configurations and dependencies