@@ -1,7 +1,10 @@
 package com.maal.certifiedbuilderapi.business.usecases;
 
 import com.maal.certifiedbuilderapi.business.dto.CertificateStatisticsResponse;
+import com.maal.certifiedbuilderapi.business.exception.ProductNotFoundException;
 import com.maal.certifiedbuilderapi.business.usecase.certificate.GetCertificateStatistics;
+import com.maal.certifiedbuilderapi.config.AwsTestConfig;
+import com.maal.certifiedbuilderapi.config.FeignConfig;
 import com.maal.certifiedbuilderapi.config.TestConfig;
 import com.maal.certifiedbuilderapi.domain.entity.CertificateEntity;
 import com.maal.certifiedbuilderapi.domain.entity.OrderEntity;
@@ -13,22 +16,28 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.test.context.ActiveProfiles;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 /**
  * Testes para GetCertificateStatistics
  * Atualizados para usar métodos desnormalizados do DynamoDB
  */
-@SpringBootTest(classes = TestConfig.class)
+@SpringBootTest
+@Import({TestConfig.class, FeignConfig.class, AwsTestConfig.class})
 @ActiveProfiles("test")
 class GetCertificateStatisticsTests {
+
+    @Autowired
+    private GetCertificateStatistics getCertificateStatistics;
 
     @Autowired
     private ProductRepository productRepository;
@@ -39,9 +48,6 @@ class GetCertificateStatisticsTests {
     @Autowired
     private CertificateRepository certificateRepository;
 
-    @Autowired
-    private GetCertificateStatistics getCertificateStatistics;
-
     @Test
     @DisplayName("Should return correct statistics when certificates exist")
     void shouldReturnCorrectStatisticsWhenCertificatesExist() {
@@ -51,30 +57,61 @@ class GetCertificateStatisticsTests {
         product.setProductId(productId);
         product.setProductName("Test Product");
 
-        CertificateEntity cert1 = new CertificateEntity();
-        cert1.setSuccess(true);
-        CertificateEntity cert2 = new CertificateEntity();
-        cert2.setSuccess(false);
-        CertificateEntity cert3 = new CertificateEntity();
-        cert3.setSuccess(null);
-
         OrderEntity order1 = new OrderEntity();
+        order1.setOrderId(1);
+        order1.setProductId(productId);
+
         OrderEntity order2 = new OrderEntity();
+        order2.setOrderId(2);
+        order2.setProductId(productId);
+
+        CertificateEntity certificate1 = new CertificateEntity();
+        certificate1.setId(UUID.randomUUID().toString());
+        certificate1.setOrderId(order1.getOrderId());
+        certificate1.setSuccess(true);
+
+        CertificateEntity certificate2 = new CertificateEntity();
+        certificate2.setId(UUID.randomUUID().toString());
+        certificate2.setOrderId(order2.getOrderId());
+        certificate2.setSuccess(false);
 
         when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
-        when(certificateRepository.findByProductId(productId)).thenReturn(Arrays.asList(cert1, cert2, cert3));
-        when(orderRepository.findByProductId(productId)).thenReturn(Arrays.asList(order1, order2));
+        when(orderRepository.findByProductId(productId)).thenReturn(List.of(order1, order2));
+        when(certificateRepository.findByOrderId(order1.getOrderId())).thenReturn(Optional.of(certificate1));
+        when(certificateRepository.findByOrderId(order2.getOrderId())).thenReturn(Optional.of(certificate2));
 
         // When
-        CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
+        CertificateStatisticsResponse response = getCertificateStatistics.execute(productId);
 
         // Then
-        assertEquals(productId, result.getProductId());
-        assertEquals("Test Product", result.getProductName());
-        assertEquals(2, result.getTotalCertificates());
-        assertEquals(1, result.getSuccessfulCertificates());
-        assertEquals(1, result.getFailedCertificates());
-        assertEquals(1, result.getPendingCertificates());
+        assertNotNull(response);
+        assertEquals(2, response.getTotalCertificates());
+        assertEquals(1, response.getSuccessfulCertificates());
+        assertEquals(1, response.getFailedCertificates());
+        assertEquals(0, response.getPendingCertificates());
+    }
+
+    @Test
+    @DisplayName("Should return zero statistics when no certificates exist")
+    void shouldReturnZeroStatisticsWhenNoCertificatesExist() {
+        // Given
+        Integer productId = 1;
+        ProductEntity product = new ProductEntity();
+        product.setProductId(productId);
+        product.setProductName("Test Product");
+
+        when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
+        when(orderRepository.findByProductId(productId)).thenReturn(List.of());
+
+        // When
+        CertificateStatisticsResponse response = getCertificateStatistics.execute(productId);
+
+        // Then
+        assertNotNull(response);
+        assertEquals(0, response.getTotalCertificates());
+        assertEquals(0, response.getSuccessfulCertificates());
+        assertEquals(0, response.getFailedCertificates());
+        assertEquals(0, response.getPendingCertificates());
     }
 
     @Test
@@ -85,36 +122,7 @@ class GetCertificateStatisticsTests {
         when(productRepository.findByProductId(productId)).thenReturn(Optional.empty());
 
         // When & Then
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> getCertificateStatistics.execute(productId)
-        );
-        assertTrue(exception.getMessage().contains("Product not found"));
-    }
-
-    @Test
-    @DisplayName("Should return zero statistics when no certificates exist")
-    void shouldReturnZeroStatisticsWhenNoCertificatesExist() {
-        // Given
-        Integer productId = 1;
-        ProductEntity product = new ProductEntity();
-        product.setProductId(productId);
-        product.setProductName("Empty Product");
-
-        when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
-        when(certificateRepository.findByProductId(productId)).thenReturn(List.of());
-        when(orderRepository.findByProductId(productId)).thenReturn(List.of());
-
-        // When
-        CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
-
-        // Then
-        assertEquals(productId, result.getProductId());
-        assertEquals("Empty Product", result.getProductName());
-        assertEquals(0, result.getTotalCertificates());
-        assertEquals(0, result.getSuccessfulCertificates());
-        assertEquals(0, result.getFailedCertificates());
-        assertEquals(0, result.getPendingCertificates());
+        assertThrows(ProductNotFoundException.class, () -> getCertificateStatistics.execute(productId));
     }
 
     @Test
@@ -124,26 +132,39 @@ class GetCertificateStatisticsTests {
         Integer productId = 1;
         ProductEntity product = new ProductEntity();
         product.setProductId(productId);
-        product.setProductName("Success Product");
-
-        CertificateEntity cert1 = new CertificateEntity();
-        cert1.setSuccess(true);
-        CertificateEntity cert2 = new CertificateEntity();
-        cert2.setSuccess(true);
+        product.setProductName("Test Product");
 
         OrderEntity order1 = new OrderEntity();
+        order1.setOrderId(1);
+        order1.setProductId(productId);
+
+        OrderEntity order2 = new OrderEntity();
+        order2.setOrderId(2);
+        order2.setProductId(productId);
+
+        CertificateEntity certificate1 = new CertificateEntity();
+        certificate1.setId(UUID.randomUUID().toString());
+        certificate1.setOrderId(order1.getOrderId());
+        certificate1.setSuccess(true);
+
+        CertificateEntity certificate2 = new CertificateEntity();
+        certificate2.setId(UUID.randomUUID().toString());
+        certificate2.setOrderId(order2.getOrderId());
+        certificate2.setSuccess(true);
 
         when(productRepository.findByProductId(productId)).thenReturn(Optional.of(product));
-        when(certificateRepository.findByProductId(productId)).thenReturn(Arrays.asList(cert1, cert2));
-        when(orderRepository.findByProductId(productId)).thenReturn(Arrays.asList(order1));
+        when(orderRepository.findByProductId(productId)).thenReturn(List.of(order1, order2));
+        when(certificateRepository.findByOrderId(order1.getOrderId())).thenReturn(Optional.of(certificate1));
+        when(certificateRepository.findByOrderId(order2.getOrderId())).thenReturn(Optional.of(certificate2));
 
         // When
-        CertificateStatisticsResponse result = getCertificateStatistics.execute(productId);
+        CertificateStatisticsResponse response = getCertificateStatistics.execute(productId);
 
         // Then
-        assertEquals(1, result.getTotalCertificates());
-        assertEquals(2, result.getSuccessfulCertificates());
-        assertEquals(0, result.getFailedCertificates());
-        assertEquals(0, result.getPendingCertificates());
+        assertNotNull(response);
+        assertEquals(2, response.getTotalCertificates());
+        assertEquals(2, response.getSuccessfulCertificates());
+        assertEquals(0, response.getFailedCertificates());
+        assertEquals(0, response.getPendingCertificates());
     }
 }
